# Agentic_Change_Scribe

./: Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
agentic_changescribe/: cli.py  config.py
agentic_changescribe/agents/: base.py  impact.py  review.py  risk.py
agentic_changescribe/core/: models.py  prompts.py  renderer.py  tracing.py
agentic_changescribe/llm/: base.py  openai_compat.py
agentic_changescribe/orchestration/: pipeline.py
agentic_changescribe/tools/: git_tools.py  redaction.py
examples/: change-input.example.yaml
